feat: 添加精简打包命令